--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "parcel-start-template",
+  "name": "b2-antworten",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://RuslanMirasov.github.io/parcel-start",
+  "homepage": "https://RuslanMirasov.github.io/b2-antworten",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /parcel-start/"
+    "build": "parcel build src/*.html --public-url /b2-antworten/"
   },
   "repository": {
     "type": "git",
